--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -14,10 +14,10 @@ encoding = 'UTF-8'
 
 [connections_mysql]
 dialect = "mysql"
-host = "172.16.0.121"
+host = "*******"
 port = 3306
 database = "mysql"
-username = "root"
-password = "hkc!"
+username = "***"
+password = "***"
 encoding = 'UTF-8'
 
