--- a/.streamlit/secrets_git.toml
+++ b/.streamlit/secrets_git.toml
@@ -14,10 +14,10 @@ encoding = 'UTF-8'
 
 [connections_mysql]
 dialect = "mysql"
-host = "*******"
+host = "172.16.0.***"
 port = 3306
 database = "mysql"
-username = "***"
+username = "root"
 password = "***"
 encoding = 'UTF-8'
 
